# ovirt-node-plugin-hosted-engine

./: .gitignore  Makefile.am  autogen.sh  configure.ac  ovirt-node-plugin-hosted-engine.spec.in
automation/: build-artifacts.repos  build-artifacts.req  build-artifacts.sh  check-merged.repos  check-merged.req  check-patch.repos  check-patch.req
recipe/: Makefile.am  hosted-engine-plugin-iso.ks
rwtab/: Makefile.am  README  hosted-engine
scripts/: Makefile.am  ovirt-node-hosted-engine-setup.py
src/: Makefile.am  Makefile.check  __init__.py  config.py.in  hosted_engine_model.py  hosted_engine_page.py
