AC_INIT([ovirt-node-plugin-hosted-engine], [0.0.1], [node-devel@ovirt.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign -Wno-portability tar-pax])
AC_SUBST([PLUGINNAME], ['oVirt Node Hosted Engine Plugin'])

AM_PATH_PYTHON

AC_CONFIG_FILES([Makefile
                src/Makefile
                recipe/Makefile
                ovirt-node-plugin-hosted-engine.spec])
AC_OUTPUT
